--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,6 +17,8 @@ RUN npm run build
 # Use Nginx to serve the build
 FROM nginx:alpine
 
+# Use custom nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy the build from builder stage to nginx HTML directory
 COPY --from=builder /app/build /usr/share/nginx/html
