--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -16,11 +16,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build and run Docker Compose
+      - name: Build and run Docker Compose in detached mode
         run: |
-          make up
+          make up-detached
 
-    # Add additional test steps here if needed
+      # Add additional test steps here if needed
+      # Also consider steps to stop the detached services if necessary
 
   deploy:
     runs-on: ubuntu-latest
