--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -27,14 +27,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Start SSH agent
-        run: eval $(ssh-agent -s)
-
-      - name: Add SSH key to agent
-        run: ssh-add <(echo "${{ secrets.GH_ACTIONS_SSH_KEY }}")
+      - name: Start SSH agent and add key
+        run: |
+          eval $(ssh-agent -s)
+          echo "${{ secrets.GH_ACTIONS_SSH_KEY }}" | tr -d '\r' | ssh-add - > /dev/null
         env:
           SSH_PASSPHRASE: ${{ secrets.GH_ACTIONS_SSH_PASSPHRASE }}
-
+        
       - name: Deploy to DigitalOcean
         run: |
           ssh-keyscan 165.227.44.125 >> ~/.ssh/known_hosts
