updated ssh agent

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -32,11 +32,11 @@ jobs:
           eval $(ssh-agent -s)
           echo "${{ secrets.GH_ACTIONS_SSH_KEY }}" | tr -d '\r' | ssh-add - > /dev/null
         env:
-          SSH_PASSPHRASE: ${{ secrets.GH_ACTIONS_SSH_PASSPHRASE }}
-        
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+
       - name: Deploy to DigitalOcean
         run: |
           ssh-keyscan 165.227.44.125 >> ~/.ssh/known_hosts
-          ssh gh-actions@165.227.44.125 mkdir -p ~/jayplus
+          ssh -o StrictHostKeyChecking=no gh-actions@165.227.44.125 mkdir -p ~/jayplus
           scp -r ./* gh-actions@165.227.44.125:~/jayplus/
-          ssh gh-actions@165.227.44.125 "cd ~/jayplus && make up-detached"
+          ssh -o StrictHostKeyChecking=no gh-actions@165.227.44.125 "cd ~/jayplus && make up-detached"
