--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -8,38 +8,27 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-
       - name: Build and run Docker Compose in detached mode
         run: make up-detached
 
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-test
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Add SSH key to agent
-        run: |
-          eval $(ssh-agent -s)
-          ssh-add <(echo "${{ secrets.GH_ACTIONS_SSH_KEY }}")
-
-      - name: Create .ssh directory and add remote host to known_hosts
+      - name: Copy Files to Droplet
         run: |
           mkdir -p ~/.ssh
-          chmod 700 ~/.ssh
+          echo "${{ secrets.GH_ACTIONS_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
           ssh-keyscan 165.227.44.125 >> ~/.ssh/known_hosts
-
-      - name: Deploy to DigitalOcean
+          scp -r ./ gh-actions@165.227.44.125:~/jayplus
+      - name: Deploy on Droplet
         run: |
-          ssh gh-actions@165.227.44.125 mkdir -p ~/jayplus
-          scp -r ./* gh-actions@165.227.44.125:~/jayplus/
           ssh gh-actions@165.227.44.125 "cd ~/jayplus && make up-detached"
