--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -9,46 +9,48 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-    - name: Build and run Docker Compose in detached mode
-      run: make up-detached
-    - name: Archive production artifacts
-      run: tar -zcvf artifacts.tar.gz ./backend ./frontend
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: app-artifacts
-        path: ./artifacts.tar.gz
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build and run Docker Compose in detached mode
+        run: make up-detached
+      - name: Archive production artifacts
+        run: tar -zcvf artifacts.tar.gz ./backend ./frontend
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: app-artifacts
+          path: ./artifacts.tar.gz
 
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-test
     steps:
-    - name: Download artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: app-artifacts
-    - name: Deploy to DigitalOcean Droplet
-      run: |
-        # Install SSH client
-        sudo apt-get install -y openssh-client
-        # Add the VM to known hosts
-        ssh-keyscan 165.227.44.125 >> ~/.ssh/known_hosts
-        # Write GitHub Actions SSH key to disk
-        echo "${{ secrets.GH_ACTIONS_SSH_KEY }}" > gh-actions-ssh-key
-        chmod 600 gh-actions-ssh-key
-        # Copy artifacts to the VM
-        scp -i gh-actions-ssh-key artifacts.tar.gz gh-actions@165.227.44.125:~/ 
-        # SSH into the VM
-        ssh -i gh-actions-ssh-key gh-actions@165.227.44.125 'bash -s' << 'EOF'
-          # Unpack the artifacts
-          tar -zxvf ~/artifacts.tar.gz
-          # Navigate to the directory containing the Makefile and run it (if needed)
-          cd ~/backend
-          make up-detached
-          cd ~/frontend
-          make up-detached
-        EOF
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: app-artifacts
+      - name: Deploy to DigitalOcean Droplet
+        run: |
+          # Install SSH client
+          sudo apt-get install -y openssh-client
+          # Ensure the ~/.ssh directory exists
+          mkdir -p ~/.ssh
+          # Add the VM to known hosts
+          ssh-keyscan 165.227.44.125 >> ~/.ssh/known_hosts
+          # Write GitHub Actions SSH key to disk
+          echo "${{ secrets.GH_ACTIONS_SSH_KEY }}" > gh-actions-ssh-key
+          chmod 600 gh-actions-ssh-key
+          # Copy artifacts to the VM
+          scp -i gh-actions-ssh-key artifacts.tar.gz gh-actions@165.227.44.125:~/ 
+          # SSH into the VM
+          ssh -i gh-actions-ssh-key gh-actions@165.227.44.125 'bash -s' << 'EOF'
+            # Unpack the artifacts
+            tar -zxvf ~/artifacts.tar.gz
+            # Navigate to the directory containing the Makefile and run it (if needed)
+            cd ~/backend
+            make up-detached
+            cd ~/frontend
+            make up-detached
+          EOF
