--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -15,8 +15,10 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Build and run Docker Compose in detached mode
         run: make up-detached
+      - name: Stop running services
+        run: make down
       - name: Archive entire application as an artifact, excluding certain directories
-        run: tar --warning=no-file-changed -zcvf jayplus.tar.gz --exclude-from=.tarignore .
+        run: tar -zcvf jayplus.tar.gz --exclude-from=.tarignore .
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
