--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -17,13 +17,11 @@ jobs:
         run: make up-detached
       - name: Stop running services
         run: make down
-      - name: Archive entire application as an artifact, excluding certain directories
-        run: tar -zcvf jayplus.tar.gz --exclude-from=.tarignore .
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: jayplus-artifact
-          path: ./jayplus.tar.gz
+          path: ./
 
   deploy:
     runs-on: ubuntu-latest
@@ -43,11 +41,9 @@ jobs:
           echo "${{ secrets.GH_ACTIONS_SSH_KEY }}" > gh-actions-ssh-key
           chmod 600 gh-actions-ssh-key
           # Copy artifacts to the VM
-          scp -i gh-actions-ssh-key jayplus.tar.gz gh-actions@165.227.44.125:~/ 
+          scp -r -i gh-actions-ssh-key ./ gh-actions@165.227.44.125:~/ 
           # SSH into the VM
           ssh -i gh-actions-ssh-key gh-actions@165.227.44.125 'bash -s' << 'EOF'
-            # Unpack the artifacts
-            tar -zxvf ~/jayplus.tar.gz -C ~/
             # Navigate to the root directory and run the Makefile (assuming it deploys both backend and frontend)
             cd ~/
             make up-detached
