--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -35,6 +35,9 @@ jobs:
         run: |
           # Install SSH client
           sudo apt-get install -y openssh-client
+          # Create .ssh directory and known_hosts file if they do not exist
+          mkdir -p ~/.ssh
+          touch ~/.ssh/known_hosts
           # Add the VM to known hosts
           ssh-keyscan 165.227.44.125 >> ~/.ssh/known_hosts
           # Write GitHub Actions SSH key to disk
