fixed artifact name

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -44,7 +44,7 @@ jobs:
           echo "${{ secrets.GH_ACTIONS_SSH_KEY }}" > gh-actions-ssh-key
           chmod 600 gh-actions-ssh-key
           # Copy artifacts to the VM
-          scp -i gh-actions-ssh-key jayplus.tar.gz gh-actions@165.227.44.125:~/
+          scp -r -i gh-actions-ssh-key ./jayplus-artifact/ gh-actions@165.227.44.125:~/
           # SSH into the VM
           ssh -i gh-actions-ssh-key gh-actions@165.227.44.125 'bash -s' << 'EOF'
             # Unpack the artifacts
