--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -23,10 +23,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-test
     steps:
+      - name: List current directory
+        run: ls -la
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
           name: jayplus-artifact
+      - name: List current directory
+        run: ls -la
       - name: Setup SSH and Deploy
         run: |
           sudo apt-get install -y openssh-client
