--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -23,13 +23,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-test
     steps:
-      - name: List current directory
+      - name: List current directory (Before Download)
         run: ls -la
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
           name: jayplus-artifact
-      - name: List current directory
+      - name: List current directory (After Download)
         run: ls -la
       - name: Setup SSH and Deploy
         run: |
@@ -38,5 +38,6 @@ jobs:
           ssh-keyscan 165.227.44.125 >> ~/.ssh/known_hosts
           echo "${{ secrets.GH_ACTIONS_SSH_KEY }}" > gh-actions-ssh-key
           chmod 600 gh-actions-ssh-key
-          scp -r -i gh-actions-ssh-key ./jayplus-artifact/ gh-actions@165.227.44.125:~/
+          # SCP all contents of current directory
+          scp -r -i gh-actions-ssh-key ./ gh-actions@165.227.44.125:~/
           ssh -i gh-actions-ssh-key gh-actions@165.227.44.125 'cd ~/ && make up-detached'
