--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -28,19 +28,12 @@ jobs:
         with:
           name: jayplus-artifact
           path: /home/runner/work/jayplus/jayplus-artifact
-      - name: Debug echo
-        run: echo "This is a debug echo"
-      - name: Setup SSH directory
-        run: mkdir -p ~/.ssh
-      - name: Ping host
-        run: ping -c 3 165.227.44.125
-      - name: Verbose ssh-keyscan
-        run: ssh-keyscan -vvv 165.227.44.125 >> ~/.ssh/known_hosts
-      - name: Setup SSH key
+      - name: Setup SSH and Deploy
         run: |
+          sudo apt-get install -y openssh-client
+          mkdir -p ~/.ssh
+          ssh-keyscan 165.227.44.125 >> ~/.ssh/known_hosts
           echo "${{ secrets.GH_ACTIONS_SSH_KEY }}" > gh-actions-ssh-key
           chmod 600 gh-actions-ssh-key
-      - name: Copy artifacts
-        run: scp -r -i gh-actions-ssh-key /home/runner/work/jayplus/jayplus-artifact/* gh-actions@165.227.44.125:~/
-      - name: Deploy
-        run: ssh -i gh-actions-ssh-key gh-actions@165.227.44.125 'cd ~/ && make up-detached'
+          scp -r -i gh-actions-ssh-key /home/runner/work/jayplus/jayplus-artifact/* gh-actions@165.227.44.125:~/
+          ssh -i gh-actions-ssh-key gh-actions@165.227.44.125 'cd ~/ && make up-detached'
