--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,11 @@ services:
       - "${SERVER_PORT:-8080}:8080"
     environment:
       - SERVER_PORT=${SERVER_PORT:-8080}
+      - DB_HOST=${DB_HOST:-localhost}
+      - DB_PORT=${DB_PORT:-3306}
+      - DB_NAME=${DB_NAME:-test}
+      - DB_USER=${DB_USER:-root}
+      - DB_PASSWORD=${DB_PASSWORD:-root}
 
   frontend:
     build:
