fixed bug with cicd

--- a/.github/workflows/cicd-dev.yaml
+++ b/.github/workflows/cicd-dev.yaml
@@ -6,23 +6,23 @@ on:
       - dev
 
 env:
-  SERVER_PORT: {{ secrets.SERVER_PORT }}
-  DB_HOST: {{ secrets.DB_HOST }}
-  DB_PORT: {{ secrets.DB_PORT }}
-  DB_NAME: {{ secrets.DB_NAME }}
-  DB_USER: {{ secrets.DB_USER }}
-  DB_PASSWORD: {{ secrets.DB_PASSWORD }}
-  JWT_ISSUER: {{ secrets.JWT_ISSUER }}
-  JWT_AUDIENCE: {{ secrets.JWT_AUDIENCE }}
-  JWT_SECRET: {{ secrets.JWT_SECRET }}
-  JWT_COOKIE_DOMAIN: {{ secrets.JWT_COOKIE_DOMAIN }}
-  JWT_COOKIE_NAME: {{ secrets.JWT_COOKIE_NAME }}
-  JWT_COOKIE_PATH: {{ secrets.JWT_COOKIE_PATH }}
-  ACCESS_TOKEN_EXPIRY: {{ secrets.ACCESS_TOKEN_EXPIRY }}
-  REFRESH_TOKEN_EXPIRY: {{ secrets.REFRESH_TOKEN_EXPIRY }}
+  SERVER_PORT: ${{ secrets.SERVER_PORT }}
+  DB_HOST: ${{ secrets.DB_HOST }}
+  DB_PORT: ${{ secrets.DB_PORT }}
+  DB_NAME: ${{ secrets.DB_NAME }}
+  DB_USER: ${{ secrets.DB_USER }}
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  JWT_ISSUER: ${{ secrets.JWT_ISSUER }}
+  JWT_AUDIENCE: ${{ secrets.JWT_AUDIENCE }}
+  JWT_SECRET: ${{ secrets.JWT_SECRET }}
+  JWT_COOKIE_DOMAIN: ${{ secrets.JWT_COOKIE_DOMAIN }}
+  JWT_COOKIE_NAME: ${{ secrets.JWT_COOKIE_NAME }}
+  JWT_COOKIE_PATH: ${{ secrets.JWT_COOKIE_PATH }}
+  ACCESS_TOKEN_EXPIRY: ${{ secrets.ACCESS_TOKEN_EXPIRY }}
+  REFRESH_TOKEN_EXPIRY: ${{ secrets.REFRESH_TOKEN_EXPIRY }}
 
 jobs:
-  build-and-test:
+  build-and-test:å
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
