--- a/.github/workflows/cicd-main.yaml
+++ b/.github/workflows/cicd-main.yaml
@@ -5,6 +5,22 @@ on:
     branches:
       - main
 
+env:
+  SERVER_PORT: ${{ secrets.SERVER_PORT }}
+  DB_HOST: ${{ secrets.DB_HOST }}
+  DB_PORT: ${{ secrets.DB_PORT }}
+  DB_NAME: ${{ secrets.DB_NAME }}
+  DB_USER: ${{ secrets.DB_USER }}
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  JWT_ISSUER: ${{ secrets.JWT_ISSUER }}
+  JWT_AUDIENCE: ${{ secrets.JWT_AUDIENCE }}
+  JWT_SECRET: ${{ secrets.JWT_SECRET }}
+  JWT_COOKIE_DOMAIN: ${{ secrets.JWT_COOKIE_DOMAIN }}
+  JWT_COOKIE_NAME: ${{ secrets.JWT_COOKIE_NAME }}
+  JWT_COOKIE_PATH: ${{ secrets.JWT_COOKIE_PATH }}
+  ACCESS_TOKEN_EXPIRY: ${{ secrets.ACCESS_TOKEN_EXPIRY }}
+  REFRESH_TOKEN_EXPIRY: ${{ secrets.REFRESH_TOKEN_EXPIRY }}
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -36,4 +52,4 @@ jobs:
           echo "${{ secrets.GH_ACTIONS_SSH_KEY }}" > gh-actions-ssh-key
           chmod 600 gh-actions-ssh-key
           scp -r -i gh-actions-ssh-key /home/runner/work/jayplus/jayplus-artifact/* gh-actions@165.227.44.125:~/
-          ssh -i gh-actions-ssh-key gh-actions@165.227.44.125 'cd ~/ && make up-detached'
+          ssh -i gh-actions-ssh-key gh-actions@165.227.44.125 "export SERVER_PORT=${{ secrets.SERVER_PORT }} && export DB_HOST=${{ secrets.DB_HOST }} && export DB_PORT=${{ secrets.DB_PORT }} && export DB_NAME=${{ secrets.DB_NAME }} && export DB_USER=${{ secrets.DB_USER }} && export DB_PASSWORD=${{ secrets.DB_PASSWORD }} && export JWT_ISSUER=${{ secrets.JWT_ISSUER }} && export JWT_AUDIENCE=${{ secrets.JWT_AUDIENCE }} && export JWT_SECRET=${{ secrets.JWT_SECRET }} && export JWT_COOKIE_DOMAIN=${{ secrets.JWT_COOKIE_DOMAIN }} && export JWT_COOKIE_NAME=${{ secrets.JWT_COOKIE_NAME }} && export JWT_COOKIE_PATH=${{ secrets.JWT_COOKIE_PATH }} && export ACCESS_TOKEN_EXPIRY=${{ secrets.ACCESS_TOKEN_EXPIRY }} && export REFRESH_TOKEN_EXPIRY=${{ secrets.REFRESH_TOKEN_EXPIRY }} && cd ~/ && make up-detached"
