added business specific login

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,12 @@
 server {
     listen 80;
 
+    # Extract subdomain
+    set $subdomain "";
+    if ($host ~* "^(.+?)\.") {
+        set $subdomain $1;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
@@ -14,6 +20,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        proxy_set_header Business-Name $subdomain;
         proxy_cache_bypass $http_upgrade;
     }
 }
