--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,4 +27,23 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
+      - "90:80"
+
+  website:
+    build:
+      context: ./website
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+
+  nginx:
+    build:
+      context: ./infrastructure/nginx
+      dockerfile: Dockerfile
+    ports:
       - "80:80"
+      - "443:443"
+    depends_on:
+      - backend
+      - frontend
+      - website
