--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -3,39 +3,45 @@ events {
 }
 
 http {
+    upstream backend_app {
+        server backend:8080;
+    }
+
+    upstream frontend_app {
+        server frontend:80;
+    }
+
+    upstream website_app {
+        server website:80;
+    }
+    
     server {
         listen 80 default_server;
 
-        server_name jayplus.app www.jayplus.app;
-
         location / {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri $uri/ /index.html;
+            proxy_pass http://website_app;
+            proxy_redirect off;
         }
     }
 
     server {
         listen 80;
 
-        set $subdomain "";
-        if ($host ~* "^(.+?)\.") {
-            set $subdomain $1;
-        }
-
-        server_name ~^(?<subdomain>.+)\.jayplus\.app$;
+        server_name ~^(?<subdomain>.+)\..+$;
 
         location / {
-            proxy_pass http://frontend:90;
+            proxy_pass http://frontend_app;
             proxy_redirect off;
         }
 
         location ~ ^/api/ {
-            proxy_pass http://backend:8080;
+            rewrite ^/api(/.*)$ $1 break;
+            proxy_pass http://backend_app;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Business-Name $subdomain;
             proxy_cache_bypass $http_upgrade;
         }
