--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -18,6 +18,8 @@ http {
     server {
         listen 80 default_server;
 
+        server_name jayplus.app localhost;
+        
         location / {
             proxy_pass http://website_app;
             proxy_redirect off;
@@ -27,7 +29,7 @@ http {
     server {
         listen 80;
 
-        server_name ~^(?<subdomain>.+)\..+$;
+        server_name ~^(?<subdomain>[^.]+)\.;
 
         location / {
             proxy_pass http://frontend_app;
