it did work! now just www

--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -18,8 +18,8 @@ http {
     server {
         listen 80 default_server;
 
-        server_name jayplus.app localhost;
-        
+        server_name jayplus.app www.jayplus.app localhost;
+
         location / {
             proxy_pass http://website_app;
             proxy_redirect off;
